# ChangeLog for dev-libs/gnome-build
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/ChangeLog,v 1.18 2008/10/29 18:35:16 dang Exp $

  29 Oct 2008; Daniel Gryniewicz <dang@gentoo.org> gnome-build-0.1.7.ebuild,
  gnome-build-0.2.4.ebuild, gnome-build-0.3.0.ebuild:
  Remove extra quote; bug #241492

  03 Aug 2008; Matti Bickel <mabi@gentoo.org> gnome-build-0.3.0.ebuild:
  ~ppc added for bug #204495

  08 Jul 2008; Rémi Cardona <remi@gentoo.org> gnome-build-0.3.0.ebuild:
  add missing dep on dev-perl/Locale-gettext (fixes bugs #213531 and
  #226097)

  08 Jul 2008; Rémi Cardona <remi@gentoo.org> gnome-build-0.3.0.ebuild:
  fix for glibc 2.8, see bug #225447

  06 Jun 2008; Jeroen Roovers <jer@gentoo.org> gnome-build-0.3.0.ebuild:
  Marked ~hppa (dev-util/anjuta).

*gnome-build-0.3.0 (05 Jun 2008)

  05 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-build-0.1.3.ebuild, -gnome-build-0.1.4.ebuild,
  -gnome-build-0.2.0.ebuild, -gnome-build-0.2.1.ebuild,
  +gnome-build-0.3.0.ebuild:
  bump to 0.3.0. Clean up old revisions.

  10 May 2008; Raúl Porcel <armin76@gentoo.org> gnome-build-0.1.7.ebuild:
  sparc stable

*gnome-build-0.2.4 (12 Mar 2008)

  12 Mar 2008; Rémi Cardona <remi@gentoo.org> +gnome-build-0.2.4.ebuild:
  bump to 0.2.4

  03 Mar 2008; Christoph Mende <angelos@gentoo.org>
  gnome-build-0.1.7.ebuild:
  Stable on amd64, bug #204494

*gnome-build-0.2.1 (30 Jan 2008)

  30 Jan 2008; Rémi Cardona <remi@gentoo.org> +gnome-build-0.2.1.ebuild:
  bump to 0.2.1

  24 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  gnome-build-0.1.7.ebuild:
  x86 stable, bug 204494

*gnome-build-0.2.0 (16 Jan 2008)

  16 Jan 2008; Rémi Cardona <remi@gentoo.org> +gnome-build-0.2.0.ebuild:
  Add version 0.2.0

  06 Jan 2008; Ferris McCormick <fmccor@gentoo.org>
  gnome-build-0.1.7.ebuild:
  Add ~sparc for testing, needed by Bug #204495

  17 Jul 2007; Saleem Abdulrasool <compnerd@gentoo.org>