@@ -1,0 +1,31 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/gnome-build-2.24.1.ebuild,v 1.1 2008/11/24 13:54:36 eva Exp $
+
+inherit gnome2
+
+DESCRIPTION="The Gnome Build Framework"
+HOMEPAGE="http://www.gnome.org/"
+
+LICENSE="LGPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~hppa ~ppc ~sparc ~x86"
+IUSE=""
+
+RDEPEND=">=dev-libs/glib-2.16
+	>=x11-libs/gtk+-2.4
+	>=dev-libs/gdl-2.23.0
+	>=dev-libs/libxml2-2.6
+	>=gnome-base/libglade-2.0
+	>=gnome-base/libgnome-2.4
+	>=gnome-base/libgnomeui-2.4
+	>=gnome-base/libbonoboui-2.4
+	>=gnome-base/libglade-2.0.1
+	dev-perl/Locale-gettext"
+DEPEND="${RDEPEND}
+	sys-devel/gettext
+	dev-util/pkgconfig
+	>=dev-util/intltool-0.35"
+
+DOCS="AUTHORS ChangeLog MAINTAINERS NEWS README"
+
