@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/gnome-build
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/ChangeLog,v 1.18 2008/10/29 18:35:16 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/ChangeLog,v 1.19 2008/11/24 13:54:36 eva Exp $
+
+*gnome-build-2.24.1 (24 Nov 2008)
+
+  24 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +gnome-build-2.24.1.ebuild:
+  New version for GNOME 2.24. Bug fixes, port to GOption, remove dependency
+  on gdl-gnome, translation updates.
 
   29 Oct 2008; Daniel Gryniewicz <dang@gentoo.org> gnome-build-0.1.7.ebuild,
   gnome-build-0.2.4.ebuild, gnome-build-0.3.0.ebuild:
